✅ fix div.textarea at line 171 in webDisplaySerial/style.css issue -> It have double 'overflow' [hidden, scroll]

--- a/webDisplaySerial/style.css
+++ b/webDisplaySerial/style.css
@@ -174,7 +174,7 @@ div.textarea {
   background-color: transparent;
   height: 100%;
   width: 322px;
-  overflow: scroll;
+  /* overflow: scroll; */
   transition: 1s;
   overflow: hidden;
 }
